tests/ui/pattern/usefulness/struct-pattern-match-useless.stderr
error: unreachable pattern
  --> $DIR/struct-pattern-match-useless.rs:12:9
   |
LL |         Foo { x: _x, y: _y } => (),
   |         -------------------- matches any value
LL |         Foo { .. } => ()
   |         ^^^^^^^^^^ no value can reach this
   |
note: the lint level is defined here
  --> $DIR/struct-pattern-match-useless.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

